--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -10,6 +10,15 @@
       "default_icon": "icons/icon_default.png"
   },
   "permissions": [
-    "activeTab"
-  ]
+    "tabs"
+  ],
+    "background": {
+        "scripts": ["background.js"]
+    }
+    // "content_scripts": [
+    //     {
+    //         "matches": ["<all_urls>"],
+    //         "js": ["script.js"]
+    //     }
+    // ]
 }
